helm-charts/db2-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db2
  namespace: db
spec:
  ports:
    - port: 50000
  selector:
    app: db2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db2
  namespace: db
spec:
  selector:
    matchLabels:
      app: db2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db2
    spec:
      # IBM DB2 has no ARM64 image; force amd64 via platform emulation in Minikube
      nodeSelector: {}
      containers:
        - image: icr.io/db2_community/db2:11.5.9.0
          name: db2
          imagePullPolicy: Never
          securityContext:
            privileged: true
          ports:
            - containerPort: 50000
              name: db2
